--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
     <!--Go to https://console.firebase.google.com-->
     <!--Sign in and add a project "fireMessage"-->
     <!--PASTE SNIPPET HERE-->
-
+<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDOuVpz_jhPiZotRK6L_IwogY8N-FMUfrc",
+    authDomain: "firemessage-b367c.firebaseapp.com",
+    databaseURL: "https://firemessage-b367c.firebaseio.com",
+    projectId: "firemessage-b367c",
+    storageBucket: "",
+    messagingSenderId: "996119659045"
+  };
+  firebase.initializeApp(config);
+</script>
 
 
 
